<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewCriptomonedas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/PrimaryColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imagenCriptomoneda"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_baseline_monetization_on_24" />

        <TextView
            android:id="@+id/tvNombreCriptomoneda"
            android:textColor="@color/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imagenCriptomoneda"
            android:shadowColor="#673AB7"
            android:text="@string/nombre_criptomoneda"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCurrency"
            android:textColor="@color/Text_Icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNombreCriptomoneda"
            android:layout_marginStart="17dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/imagenCriptomoneda"
            android:text="@string/currency"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:textColor="@color/Text_Icons"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCurrency"
            android:layout_marginStart="17dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/imagenCriptomoneda"
            android:text="@string/price"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:textColor="@color/Text_Icons"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrice"
            android:layout_marginStart="17dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/imagenCriptomoneda"
            android:text="@string/id"
            android:textSize="16sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>